修正了base64码的解析, 原来多转了一层, 把16进制的字符串又转成了ASCII的值