@@ -8,7 +8,9 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+import sun.misc.BASE64Decoder;
 
+import java.io.IOException;
 import java.time.LocalDateTime;
 
 @Slf4j
@@ -21,7 +23,7 @@ public class MainController {
     }
 
     @RequestMapping("**")
-    public String test(@RequestBody String body) {
+    public String test(@RequestBody String body) throws IOException {
         JsonObject jsonObject = new JsonParser().parse(body).getAsJsonObject();
         log.info("received request:" + body);
 
@@ -31,11 +33,15 @@ public class MainController {
                 .getAsJsonObject("data").getAsJsonObject();
 
         if (data.get("rawData") != null) {
-            byte[] hexStringByte = Base64.decode(
-                    data.get("rawData")
-                            .getAsString());
-            String hexString = HexBin.encode(hexStringByte);
-            log.info("hex:" + hexString);
+            BASE64Decoder base64Decoder = new BASE64Decoder();
+            byte[] hexBytes = base64Decoder.decodeBuffer(data.get("rawData").getAsString());
+            String hexString1 = new String(hexBytes);
+
+            log.info("hex:" + hexString1);
+
+            String hexString2 = HexBin.encode(hexBytes);
+
+            log.info("hex:" + hexString2);
         }
 
         return "ok";
